--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@types/googlemaps": "^3.39.6",
         "@types/koa": "^2.11.2",
         "@types/koa-bodyparser": "^4.3.0",
+        "@types/koa-router": "^7.4.1",
         "@types/koa-static": "^4.0.1",
         "@types/koa__router": "^8.0.2",
         "@types/lodash-es": "^4.17.3",
@@ -38,6 +39,7 @@
         "html-webpack-plugin": "^4.3.0",
         "koa": "^2.11.0",
         "koa-bodyparser": "^4.3.0",
+        "koa-router": "^9.0.1",
         "koa-static": "^5.0.0",
         "lit-element": "^2.3.1",
         "lodash-es": "^4.17.15",
