--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "cross-spawn": "^7.0.3",
         "file-loader": "^5.1.0",
         "fs-jetpack": "^2.2.3",
+        "google-maps": "^4.2.3",
         "html-webpack-plugin": "^4.3.0",
         "koa": "^2.11.0",
         "koa-bodyparser": "^4.3.0",
@@ -49,6 +50,7 @@
         "open": "^7.0.4",
         "pkg": "^4.4.8",
         "raw-loader": "^4.0.0",
+        "three": "^0.117.1",
         "ts-loader": "^6.2.1",
         "typescript": "^3.8.3",
         "webpack": "^4.42.0",
