--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
         "nodemon-webpack-plugin": "^4.3.1",
         "open": "^7.0.4",
         "pkg": "^4.4.8",
-        "raw-loader": "^4.0.0",
+        "protobufjs": "^6.9.0",
+        "raw-loader": "^4.0.1",
         "three": "^0.117.1",
         "ts-loader": "^6.2.1",
         "typescript": "^3.8.3",
