--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,10 @@
     },
     "include": [
         "src-server",
-        "src-client"
+        "src-client",
+        "utils"
+    ],
+    "exclude": [
+        "node_modules"
     ]
 }
